--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,18 +16,24 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_localizations:
+    sdk: flutter
   flutter_screenutil: ^5.8.4
   flutter_secure_storage: ^8.0.0
   formz: ^0.6.0
+  intl: ^0.18.0
   shared_preferences: ^2.0.15
   user_repository:
     path: packages/user_repository
 
+
 dev_dependencies:
-  bloc_test: ^9.1.0
+  bloc_test: ^9.1.2
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
+  very_good_analysis: ^5.0.0
 
 flutter:
   uses-material-design: true
+  generate: true
