--- a/packages/codeunion_ui/gallery/android/app/src/main/AndroidManifest.xml
+++ b/packages/codeunion_ui/gallery/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codeunion.ui.gallery">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="gallery"
         android:name="${applicationName}"
