--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.3.1
   flutter_screenutil: ^5.8.4
   flutter_secure_storage: ^8.0.0
   formz: ^0.6.0
@@ -26,9 +27,13 @@ dependencies:
   user_repository:
     path: packages/user_repository
 
+assets:
+    - assets/logo.png
 
+    
 dev_dependencies:
   bloc_test: ^9.1.2
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
